generated/GLFW3.cs

// ----------------------------------------------------------------------------
// <auto-generated>
// This is autogenerated code by CppSharp.
// Do not edit this file or all your changes will be lost after re-generation.
// </auto-generated>
// ----------------------------------------------------------------------------
using System;
using System.Runtime.InteropServices;
using System.Security;

namespace glfw3
{
    public enum KEY
    {
        UNKNOWN = 0,
        SPACE = 32,
        APOSTROPHE = 39,
        COMMA = 44,
        MINUS = 45,
        PERIOD = 46,
        SLASH = 47,
        _0 = 48,
        _1 = 49,
        _2 = 50,
        _3 = 51,
        _4 = 52,
        _5 = 53,
        _6 = 54,
        _7 = 55,
        _8 = 56,
        _9 = 57,
        SEMICOLON = 59,
        EQUAL = 61,
        A = 65,
        B = 66,
        C = 67,
        D = 68,
        E = 69,
        F = 70,
        G = 71,
        H = 72,
        I = 73,
        J = 74,
        K = 75,
        L = 76,
        M = 77,
        N = 78,
        O = 79,
        P = 80,
        Q = 81,
        R = 82,
        S = 83,
        T = 84,
        U = 85,
        V = 86,
        W = 87,
        X = 88,
        Y = 89,
        Z = 90,
        LEFT_BRACKET = 91,
        BACKSLASH = 92,
        RIGHT_BRACKET = 93,
        GRAVE_ACCENT = 96,
        WORLD_1 = 161,
        WORLD_2 = 162,
        ESCAPE = 256,
        ENTER = 257,
        TAB = 258,
        BACKSPACE = 259,
        INSERT = 260,
        DELETE = 261,
        RIGHT = 262,
        LEFT = 263,
        DOWN = 264,
        UP = 265,
        PAGE_UP = 266,
        PAGE_DOWN = 267,
        HOME = 268,
        END = 269,
        CAPS_LOCK = 280,
        SCROLL_LOCK = 281,
        NUM_LOCK = 282,
        PRINT_SCREEN = 283,
        PAUSE = 284,
        F1 = 290,
        F2 = 291,
        F3 = 292,
        F4 = 293,
        F5 = 294,
        F6 = 295,
        F7 = 296,
        F8 = 297,
        F9 = 298,
        F10 = 299,
        F11 = 300,
        F12 = 301,
        F13 = 302,
        F14 = 303,
        F15 = 304,
        F16 = 305,
        F17 = 306,
        F18 = 307,
        F19 = 308,
        F20 = 309,
        F21 = 310,
        F22 = 311,
        F23 = 312,
        F24 = 313,
        F25 = 314,
        KP_0 = 320,
        KP_1 = 321,
        KP_2 = 322,
        KP_3 = 323,
        KP_4 = 324,
        KP_5 = 325,
        KP_6 = 326,
        KP_7 = 327,
        KP_8 = 328,
        KP_9 = 329,
        KP_DECIMAL = 330,
        KP_DIVIDE = 331,
        KP_MULTIPLY = 332,
        KP_SUBTRACT = 333,
        KP_ADD = 334,
        KP_ENTER = 335,
        KP_EQUAL = 336,
        LEFT_SHIFT = 340,
        LEFT_CONTROL = 341,
        LEFT_ALT = 342,
        LEFT_SUPER = 343,
        RIGHT_SHIFT = 344,
        RIGHT_CONTROL = 345,
        RIGHT_ALT = 346,
        RIGHT_SUPER = 347,
        MENU = 348,
        LAST = 0,
        KY_KEYS = 0
    }

    public enum MOUSE
    {
        BUTTON_1 = 0,
        BUTTON_2 = 1,
        BUTTON_3 = 2,
        BUTTON_4 = 3,
        BUTTON_5 = 4,
        BUTTON_6 = 5,
        BUTTON_7 = 6,
        BUTTON_8 = 7,
        BUTTON_LAST = 0,
        BUTTON_LEFT = 0,
        BUTTON_RIGHT = 0,
        BUTTON_MIDDLE = 0,
        MOUSE_BUTTONS = 0
    }

    public enum JOYSTICK
    {
        _1 = 0,
        _2 = 1,
        _3 = 2,
        _4 = 3,
        _5 = 4,
        _6 = 5,
        _7 = 6,
        _8 = 7,
        _9 = 8,
        _10 = 9,
        _11 = 10,
        _12 = 11,
        _13 = 12,
        _14 = 13,
        _15 = 14,
        _16 = 15,
        LAST = 0
    }

    // <remarks>
    // <para>  Generic function pointer used for returning client API function pointers</para>
    // <para>  without forcing a cast from a regular pointer.</para>
    // </remarks>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWglproc();

    // <remarks>
    // <para>  Generic function pointer used for returning Vulkan API function pointers</para>
    // <para>  without forcing a cast from a regular pointer.</para>
    // </remarks>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWvkproc();

    // <remarks>  Opaque monitor object.</remarks>
    // <remarks>  Opaque window object.</remarks>
    // <remarks>  Opaque cursor object.</remarks>
    // <remarks>  This is the function signature for error callback functions.</remarks>
    // <param name="error">An [error code](</param>
    // <param name="description">A UTF-8 encoded string describing the error.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWerrorfun(int _0, [MarshalAs(UnmanagedType.LPStr)] string _1);

    // <remarks>  This is the function signature for window position callback functions.</remarks>
    // <param name="window">The window that was moved.</param>
    // <param name="xpos">
    // <para>The new x-coordinate, in screen coordinates, of the</para>
    // <para>upper-left corner of the client area of the window.</para>
    // </param>
    // <param name="ypos">
    // <para>The new y-coordinate, in screen coordinates, of the</para>
    // <para>upper-left corner of the client area of the window.</para>
    // </param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWwindowposfun(global::System.IntPtr _0, int _1, int _2);

    // <remarks>  This is the function signature for window size callback functions.</remarks>
    // <param name="window">The window that was resized.</param>
    // <param name="width">The new width, in screen coordinates, of the window.</param>
    // <param name="height">The new height, in screen coordinates, of the window.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWwindowsizefun(global::System.IntPtr _0, int _1, int _2);

    // <remarks>  This is the function signature for window close callback functions.</remarks>
    // <param name="window">The window that the user attempted to close.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWwindowclosefun(global::System.IntPtr _0);

    // <remarks>  This is the function signature for window refresh callback functions.</remarks>
    // <param name="window">The window whose content needs to be refreshed.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWwindowrefreshfun(global::System.IntPtr _0);

    // <remarks>  This is the function signature for window focus callback functions.</remarks>
    // <param name="window">The window that gained or lost input focus.</param>
    // <param name="focused">
    // <para>`GLFW_TRUE` if the window was given input focus, or</para>
    // <para>`GLFW_FALSE` if it lost it.</para>
    // </param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWwindowfocusfun(global::System.IntPtr _0, int _1);

    // <remarks>
    // <para>  This is the function signature for window iconify/restore callback</para>
    // <para>  functions.</para>
    // </remarks>
    // <param name="window">The window that was iconified or restored.</param>
    // <param name="iconified">
    // <para>`GLFW_TRUE` if the window was iconified, or</para>
    // <para>`GLFW_FALSE` if it was restored.</para>
    // </param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWwindowiconifyfun(global::System.IntPtr _0, int _1);

    // <remarks>
    // <para>  This is the function signature for framebuffer resize callback</para>
    // <para>  functions.</para>
    // </remarks>
    // <param name="window">The window whose framebuffer was resized.</param>
    // <param name="width">The new width, in pixels, of the framebuffer.</param>
    // <param name="height">The new height, in pixels, of the framebuffer.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWframebuffersizefun(global::System.IntPtr _0, int _1, int _2);

    // <remarks>  This is the function signature for mouse button callback functions.</remarks>
    // <param name="window">The window that received the event.</param>
    // <param name="button">
    // <para>The [mouse button](</para>
    // <para>released.</para>
    // </param>
    // <param name="action">One of `GLFW_PRESS` or `GLFW_RELEASE`.</param>
    // <param name="mods">
    // <para>Bit field describing which [modifier keys](</para>
    // <para>held down.</para>
    // </param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWmousebuttonfun(global::System.IntPtr _0, int _1, int _2, int _3);

    // <remarks>  This is the function signature for cursor position callback functions.</remarks>
    // <param name="window">The window that received the event.</param>
    // <param name="xpos">
    // <para>The new cursor x-coordinate, relative to the left edge of</para>
    // <para>the client area.</para>
    // </param>
    // <param name="ypos">
    // <para>The new cursor y-coordinate, relative to the top edge of the</para>
    // <para>client area.</para>
    // </param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWcursorposfun(global::System.IntPtr _0, double _1, double _2);

    // <remarks>  This is the function signature for cursor enter/leave callback functions.</remarks>
    // <param name="window">The window that received the event.</param>
    // <param name="entered">
    // <para>`GLFW_TRUE` if the cursor entered the window's client</para>
    // <para>area, or `GLFW_FALSE` if it left it.</para>
    // </param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWcursorenterfun(global::System.IntPtr _0, int _1);

    // <remarks>  This is the function signature for scroll callback functions.</remarks>
    // <param name="window">The window that received the event.</param>
    // <param name="xoffset">The scroll offset along the x-axis.</param>
    // <param name="yoffset">The scroll offset along the y-axis.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWscrollfun(global::System.IntPtr _0, double _1, double _2);
